# web_serial_monitor

./: Cargo.toml  Dioxus.toml  LICENSE  README.md  tailwind.css
.github/workflows/: deploy.yml
assets/: log_worker.js  tailwind.css
assets/js/: log_worker.js
src/: config.rs  main.rs  serial.rs  state.rs  types.rs
src/components/: common.rs  connection_control.rs  console.rs  filter_section.rs  footer.rs  header.rs  layout_shell.rs  mod.rs  serial_monitor.rs  settings_panel.rs
src/components/connection/: baud_rate_picker.rs  mod.rs  settings_dropdown.rs  status.rs
src/components/console/: bridge.rs  constants.rs  data_request.rs  filter_bar.rs  input_bar.rs  layout_utils.rs  log_line.rs  macro_bar.rs  mod.rs  search_bar.rs  transmit_bar.rs  types.rs  utils.rs  view.rs  viewport.rs  worker.rs
src/components/console/hooks/: data_request.rs  effects.rs  mod.rs  virtual_scroll.rs
src/components/console/ui/: filter_bar.rs  header.rs  macro_bar.rs  mod.rs  search_bar.rs  transmit_bar.rs  view.rs  viewport.rs
src/components/console/utils/: layout_utils.rs  mod.rs  style.rs
src/components/monitor/: monitor_header.rs  monitor_log_line.rs  monitor_view.rs  monitor_viewport.rs
src/components/monitor/hooks/: effects.rs  virtual_scroll.rs
src/components/monitor/utils/: layout_utils.rs
src/components/terminal/: hooks.rs  mod.rs  toolbar.rs
src/components/ui/: buttons.rs  feedback.rs  forms.rs  mod.rs
src/hooks/: mod.rs  serial.rs  worker.rs  worker_bridge.rs
src/utils/: ansi_decoder.rs  filter.rs  format.rs  highlight.rs  history.rs  mod.rs  parser.rs  scroll.rs  serial_api.rs  simulation.rs  terminal_bindings.rs
src/worker/: chunk_handler.rs  core.rs  dispatcher.rs  error.rs  export.rs  formatter.rs  index.rs  log_processor.rs  mod.rs  processor.rs  repository.rs  search.rs  state.rs  storage.rs  types.rs
src/worker/commands/: command.rs  handlers.rs  mod.rs
src/worker/repository/: mod.rs
src/worker/repository/index/: log_index.rs
