[package]
name = "serial_monitor"
version = "0.1.0"
authors = ["imwoo90 <wim90@kakao.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["document", "asset", "web", "html", "macro", "hooks", "signals"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
js-sys = "0.3.85"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde-json-wasm = "1.0.1"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0"
wasm-bindgen = "0.2.108"
web-sys = { version = "0.3.85", features = ["Worker", "MessageEvent", "Element", "HtmlElement", "ScrollToOptions"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
