[package]
name = "serial_monitor"
version = "0.1.0"
authors = ["imwoo90 <wim90@kakao.com>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.43", features = ["wasmbind"] }
dioxus = { version = "0.7.1", features = ["document", "asset", "web", "html", "macro", "hooks", "signals"] }
futures-util = "0.3.31"
gloo-timers = { version = "0.3.0", features = ["futures"] }
js-sys = "0.3.85"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
wasm-streams = "0.5.0"
web-sys = { version = "0.3.85", features = [
    "Window",
    "Worker",
    "MessageEvent",
    "Navigator",
    "Serial",
    "SerialPort",
    "SerialOptions",
    "ReadableStream",
    "WritableStream",
    "ReadableStreamDefaultReader",
    "WritableStreamDefaultWriter",
    "Storage",
    "StorageManager",
    "FileSystemHandle",
    "FileSystemFileHandle",
    "FileSystemDirectoryHandle",
    "FileSystemSyncAccessHandle",
    "FileSystemGetDirectoryOptions",
    "FileSystemReadWriteOptions",
    "console",
    "TextEncoder",
    "TextDecoder",
    "TextDecodeOptions",
    "WorkerOptions",
    "WorkerType",
    "File",
    "Blob",
] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
