[package]
name = "rusterm"
version = "0.1.0"
authors = ["imwoo90 <wim90@kakao.com>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.43", features = ["wasmbind"] }
dioxus = { version = "0.7.1", features = ["document", "asset", "web", "html", "macro", "hooks", "signals"] }
futures-util = "0.3.31"
gloo-events = "0.2.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
gloo-worker = "0.5.0"
js-sys = "0.3.85"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0"
vt100 = "0.16.2"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
wasm-streams = "0.5.0"
web-sys = { version = "0.3.85", features = [
    "Window",
    "Worker",
    "MessageEvent",
    "Navigator",
    "Serial",
    "SerialPort",
    "SerialOptions",
    "ReadableStream",
    "WritableStream",
    "ReadableStreamDefaultReader",
    "WritableStreamDefaultWriter",
    "Storage",
    "StorageManager",
    "FileSystemHandle",
    "FileSystemFileHandle",
    "FileSystemDirectoryHandle",
    "FileSystemSyncAccessHandle",
    "FileSystemGetDirectoryOptions",
    "FileSystemGetFileOptions",
    "FileSystemReadWriteOptions",
    "console",
    "TextEncoder",
    "TextDecoder",
    "TextDecodeOptions",
    "WorkerOptions",
    "WorkerType",
    "File",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "Document",
    "DedicatedWorkerGlobalScope",
    "HtmlScriptElement",
    "HtmlCollection",
    "HtmlInputElement",
    "HtmlElement",
    "Clipboard",
    "Element",
    "NodeList",
] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
